<resources>
    <string name="app_name">Pizza</string>
    <string name="password">Enter a password</string>
    <string name="telephone_number">Enter a telephone number</string>
    <string name="register">Register</string>
    <string name="enter_an_address">Enter an address</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_a_nickname">Enter a nickname</string>
    <string name="nickname_or_telephone_number">Nickname or Telephone number</string>
    <string name="password1">Password</string>
    <string name="pizza_app">Pizza App</string>
    <string name="pizza_image">Pizza Image</string>
    <string name="bavarian_ingredients">Баварские колбаски и тд.</string>
    <string name="curry_ingredients">Карри и тд.</string>
    <string name="pepperoni_ingredients">Пепперони и тд.</string>
    <string name="pineapple_ingredients">Ананасик и тд.</string>
    <string name="tomato_ingredients">Томатная и тд.</string>
    <string name="ham_ingredients">Ветчинка и тд.</string>

</resources>
